# dementia

./: .gitignore  PROGRESS.md  README.md  generate_docx.py  master-plan.md  pyproject.toml  team-split (1).md  team-split.md  tech-stack.md
.github/workflows/: ci-phone.yml
architecture/: 01-overall-system.md  02-esp32-ingestion.md  03-rpi-edge-runtime.md  04-phone-memory-gemma.md  05-caregiver-app.md  06-event-contract-storage.md
contracts/db/: schema.sql
contracts/http/: intake_api.yaml  query_api.yaml
contracts/mock/: inject_events.py  sample_envelopes.json
contracts/proto/: control_command.proto  event_envelope.proto
dementor-landing/: index.html  package.json
dementor-landing/src/: App.css  App.jsx  index.css
dementor/caregiver-app/: settings.gradle.kts
docs/: ARCHITECTURE.md  DEMO.md  GEMMA_TOOLS.md
phone/: __init__.py  config.py  main.py
phone/actions/: __init__.py  command_emitter.py
phone/gemma/: __init__.py  classifier.py  client.py  context_tools.py  empathy.py  multimodal.py  orchestrator.py  router.py  specialist.py  speech_routing.py  summarizer.py  tools.py
phone/intake/: __init__.py  deduper.py  server.py  validator.py
phone/memory/: __init__.py  db.py  fts.py  upsert.py
phone/query/: __init__.py  api.py
phone/scripts/: mock_rpi.py
phone/tests/: conftest.py  test_gemma.py  test_intake.py  test_memory.py  test_speech_routing.py  test_tools.py
sementia-landing/: package-lock.json  package.json
sementia-landing/src/: App.jsx
sementia/caregiver-app/: .gitignore  gradlew.bat  settings.gradle.kts
(+98 files in other folders)
